Добавлена стоимость в сомах

--- a/FurnitureFactory/Views/Home/MaterialReg.cshtml
+++ b/FurnitureFactory/Views/Home/MaterialReg.cshtml
@@ -21,7 +21,7 @@
         <th>Название продукта</th>
         <th>Изменение количества</th>
         <th>Дата</th>
-        <th>Стоимость покупки</th>
+        <th>Стоимость покупки (сом)</th>
         </th>
         @foreach (var b in ViewBag.material_reg)
             {
